--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+
+.custom-margin{
+    margin: 1em;
+    padding: 0.2em;
+}
