--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,5 +1,5 @@
 <div class="container border-main">
     <h3>Main Component</h3>
-    <app-search-item></app-search-item>
-    <app-list></app-list>
+    <app-search-item [products]="products" (filtered)="onFiltered($event)" ></app-search-item>
+    <app-list [products]="products"></app-list>
 </div>
