--- a/src/app/main/list/list.component.html
+++ b/src/app/main/list/list.component.html
@@ -1,4 +1,8 @@
 <div class="border-list col-8 custom-margin">
-    <h3>List component</h3>
-    <app-list-item> </app-list-item>
+    <div class="container-fluid">
+        <h2>Prodotti</h2>
+        <div *ngFor="let item of products">
+          <app-list-item [product]="item" ></app-list-item>
+        </div>
+      </div>      
 </div>
