--- a/src/app/main/search-item/search-item.component.html
+++ b/src/app/main/search-item/search-item.component.html
@@ -1,3 +1,13 @@
 <div class="col-8 border-search custom-margin">
-    search item component
+    <div class="form-group">
+        <label for="search-text">Filtra prodotto:</label>
+        <input
+          id="search-text"
+          type="text" 
+          class="form-control"
+          [(ngModel)]="filterText"
+          (input)="onSearch()"
+         placeholder="Inserisci il nome del prodotto...">
+    </div>
 </div>
+
