added euro pipe

--- a/src/app/main/list/list-item/list-item.component.html
+++ b/src/app/main/list/list-item/list-item.component.html
@@ -3,7 +3,7 @@
         {{product.name}}
     </label>
     <label class="col-sm">
-        {{product.price}}
+        {{product.price | currency:'EUR':true}}
     </label>
     <label class="col-sm">
         {{product.category}}
