--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,8 @@
 <div class="border-header">
     Header
+    <ul class="nav" routerLinkActive="active">
+        <li><a class="nav-link" routerLink="home">DAY1</a></li>
+        <li><a class="nav-link" routerLink="fantacalcio">DAY2 - Fantacalcio</a></li>
+        <li><a class="nav-link" routerLink="binding">DAY2 - Binding</a></li>
+    </ul>
 </div>
