--- a/src/app/fantacalcio/fantacalcio.component.html
+++ b/src/app/fantacalcio/fantacalcio.component.html
@@ -1,7 +1,7 @@
-<p>fantacalcio works!</p>
 
-<div>{{message}}</div>
-<div> Giocatori</div>
+<div><strong>{{message}}</strong></div>
+
+<div> Lista dei Giocatori</div>
 
 <app-player
  [players]="players" 
