--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,5 +4,7 @@
         <li><a class="nav-link" routerLink="home">DAY1</a></li>
         <li><a class="nav-link" routerLink="fantacalcio">DAY2 - Fantacalcio</a></li>
         <li><a class="nav-link" routerLink="binding">DAY2 - Binding</a></li>
+        <li><a class="nav-link" routerLink="counter">DAY2 - Contatore</a></li>
+        <li><a class="nav-link" routerLink="direttive">DAY2 - Direttive</a></li>
     </ul>
 </div>
