Add logo, style, header, footer

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,9 @@
-<div class="border-header">
-    Header
+<div class="app-header border-header">
+    <img src="assets/windtre-logo-dsk.png" alt="WindTre">
+</div>
+<div class="app-nav">
     <ul class="nav" routerLinkActive="active">
+        <li class="nav-link">Esempi di codice:</li>
         <li><a class="nav-link" routerLink="home">DAY1</a></li>
         <li><a class="nav-link" routerLink="fantacalcio">DAY2 - Fantacalcio</a></li>
         <li><a class="nav-link" routerLink="binding">DAY2 - Binding</a></li>
