--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,3 +1,5 @@
-.border-main{
-    border: 1px solid;
+.app-main {
+    border: 2px solid black;
+    height: calc(100% - 10px);
+    margin: 5px auto;
 }
