--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
+<main>
+    <app-header></app-header>
+    <div class="app-content">
+        <router-outlet></router-outlet>
+    </div>
+    <app-footer></app-footer>
+</main>
