--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,3 +1,20 @@
-.border-header{
-    border: 1px solid orchid;
+.app-header {
+    background-color: white;
+    border: 2px solid orchid;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+    img {
+        height: 50px;
+    }
+}
+.app-nav {
+    background-color: rgba(253,75,20,.7);
+    border: 2px solid darkgreen;
+    font-weight: bold;
+    a {
+        color: white;
+        font-weight: bold;
+    }
 }
