--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,4 +1,4 @@
-<div class="container border-main">
+<div class="container app-main">
     <h3>Main Component</h3>
     <app-search-item></app-search-item>
     <app-list></app-list>
