--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,6 +5,7 @@
             <ul class="nav navbar-nav" routerLinkActive="active">
                 <li class="nav-item"><a class="nav-link" routerLink="home">Prodotti</a></li>
                 <li class="nav-item"><a class="nav-link" routerLink="insert">Inserisci</a></li>
+                <li class="nav-item"><a class="nav-link" routerLink="examples">Altri esempi di codice</a></li>
             </ul>
         </div>
     </nav>
