--- a/src/app/components/direttive/direttive.component.html
+++ b/src/app/components/direttive/direttive.component.html
@@ -1,12 +1,12 @@
-<p>direttive works!</p>
+<h1>Direttive</h1>
 
 <div *ngIf="status == 'LOADING'">Caricamento in corso...</div>
 <div *ngIf="status == 'LOADED'">Caricamento effettuato. Preparo la lista...</div>
 <div *ngIf="status == 'FULL'">
     <ul>
         <li *ngFor="let item of items; let myIndex = index; let isOdd = odd; let isFirst = first">
-            
-            
+
+
             <p *ngIf="isOdd" style="background-color: lightgray;">
                 {{myIndex}} - Nome: {{item.name}}<br/>First: {{isFirst}}
             </p>
@@ -16,4 +16,4 @@
         </li>
     </ul>
     <app-test-item *ngFor="let item of items" [name]="item.name"> </app-test-item>
-</div>  
+</div>
