--- a/src/app/components/examples-view/examples-view.component.html
+++ b/src/app/components/examples-view/examples-view.component.html
@@ -1,1 +1,14 @@
-<p>examples-view works!</p>
+<div class="app-nav">
+  <ul class="nav" routerLinkActive="active">
+    <li class="nav-link">Esempi di codice:</li>
+    <li><a class="nav-link" routerLink="home">DAY1</a></li>
+    <li><a class="nav-link" routerLink="fantacalcio">DAY2 - Fantacalcio</a></li>
+    <li><a class="nav-link" routerLink="binding">DAY2 - Binding</a></li>
+    <li><a class="nav-link" routerLink="counter">DAY2 - Contatore</a></li>
+    <li><a class="nav-link" routerLink="direttive">DAY2 - Direttive</a></li>
+  </ul>
+</div>
+<div class="example-container">
+  <router-outlet></router-outlet>
+</div>
+
