--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -3,18 +3,15 @@
     border: 2px solid orchid;
     align-items: center;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     padding: 10px;
     img {
         height: 50px;
+        margin-right: 10px;
     }
-}
-.app-nav {
-    background-color: rgba(253,75,20,.7);
-    border: 2px solid darkgreen;
+  .navbar {
+    color: #fd4b14;
     font-weight: bold;
-    a {
-        color: white;
-        font-weight: bold;
-    }
+    background-color: white !important;
+  }
 }
