--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,8 +1,8 @@
 footer {
     align-items: center;
-    background-color: #fd4b14;
+    background-color: white;
     border: 2px solid darkmagenta;
-    color: white;
+    color: #fd4b14;
     font-weight: bold;
     display: flex;
     justify-content: center;
