--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -10,8 +10,11 @@
         margin-right: 10px;
     }
   .navbar {
-    color: #fd4b14;
     font-weight: bold;
     background-color: white !important;
+    &-brand {
+      color: #fd4b14;
+      font-weight: bold;
+    }
   }
 }
