--- a/src/app/components/main/item-input/item-input.component.html
+++ b/src/app/components/main/item-input/item-input.component.html
@@ -1,1 +1,19 @@
-<div> New Item Input Component</div>
+<h1>Inserisci prodotto</h1>
+<form class="form" [formGroup]="formGroup">
+  <div class="form-input">
+    <label for="product-name">Prodotto: </label>
+    <input type="text" id="product-name" [formControlName]="'name'">
+  </div>
+  <div class="form-input">
+    <label for="product-price">Prezzo: </label>
+    <input type="text" id="product-price" [formControlName]="'price'">
+  </div>
+  <div class="form-input">
+    <label for="product-category">Categoria: </label>
+    <input type="text" id="product-category" [formControlName]="'category'">
+  </div>
+  <div class="form-input">
+    <button class="btn btn-primary" (click)="onSave()">Aggiungi prodotto</button>
+  </div>
+</form>
+
