--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,8 +19,16 @@ main {
     background-color: white;
     flex: 1;
     overflow: auto;
+  padding: 1em;
 }
 
+h1 {
+  display: block;
+  text-align: center;
+  border-bottom: 1px solid lightgrey;
+  margin-bottom: 15px;
+  padding-bottom: 15px;
+}
 
 
 .custom-margin {
