featureModule, post api, routerLink with path
-minor

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,6 +7,7 @@
           <li class="nav-item"><a class="nav-link" routerLink="product">Prodotti</a></li>
           <li class="nav-item"><a class="nav-link" routerLink="insert">Inserisci</a></li>
           <li class="nav-item"><a class="nav-link" routerLink="examples">Altri esempi di codice</a></li>
+          <li class="nav-item"><a class="nav-link" routerLink="pizza">Pizza Module (..mi carico solo quando servo!)</a></li>
         </ul>
       </div>
     </nav>
