--- a/src/app/components/main/list/list-item/list-item.component.html
+++ b/src/app/components/main/list/list-item/list-item.component.html
@@ -1,5 +1,5 @@
 <div class="row product-row">
-    <label class="col-sm">
+    <label class="col-sm pointer" [routerLink]="['/detail', product.id]">
         {{product.name}}
     </label>
     <label class="col-sm">
