--- a/src/app/components/main/list/list-item/list-item.component.html
+++ b/src/app/components/main/list/list-item/list-item.component.html
@@ -8,5 +8,5 @@
     <label class="col-sm">
         {{product.category}}
     </label>
-    <img src="../../../../../assets/icon/trash.svg" (click)=onDelete(product.id)><img>
+    <img src="./assets/icon/trash.svg" (click)=onDelete(product.id)><img>
 </div>
