--- a/src/app/components/examples-view/examples-view.component.html
+++ b/src/app/components/examples-view/examples-view.component.html
@@ -5,6 +5,7 @@
     <li><a class="nav-link" routerLink="binding">DAY2 - Binding</a></li>
     <li><a class="nav-link" routerLink="counter">DAY2 - Contatore</a></li>
     <li><a class="nav-link" routerLink="direttive">DAY2 - Direttive</a></li>
+    <li><a class="nav-link" routerLink="reactive-form">DAY3 - Form avanzate</a></li>
   </ul>
 </div>
 <div class="example-container">
