--- a/src/app/components/main/item-input/item-input.component.html
+++ b/src/app/components/main/item-input/item-input.component.html
@@ -14,11 +14,11 @@
     <input type="text" id="product-category" [formControlName]="'category'">
   </div>
   <div class="form-input">
-    <label for="product-quantity">Quantità: </label>
+    <label for="product-category">Quantità: </label>
     <input type="text" id="product-category" [formControlName]="'quantity'">
   </div>
   <div class="form-input">
-    <button class="btn btn-primary" (click)="onSave()">Aggiungi prodotto</button>
+    <button class="btn btn-primary" [disabled]="this.productForm.invalid" (click)="onSave()">Aggiungi prodotto</button>
   </div>
 </form>
 
