--- a/src/app/components/main-view/search-item/search-item.component.html
+++ b/src/app/components/main-view/search-item/search-item.component.html
@@ -1,9 +1,9 @@
-<div class="col-8 border-search custom-margin">
+<div class="border-search custom-margin">
     <div class="form-group">
         <label for="search-text">Filtra prodotto:</label>
         <input
           id="search-text"
-          type="text" 
+          type="text"
           class="form-control"
           [(ngModel)]="filterText"
           (input)="onSearch()"
