--- a/src/app/components/main-view/list/list.component.html
+++ b/src/app/components/main-view/list/list.component.html
@@ -1,8 +1,8 @@
-<div class="border-list col-8 custom-margin">
+<div class="border-list custom-margin">
     <div class="container-fluid">
         <h2>Prodotti</h2>
         <div *ngFor="let item of products">
           <app-list-item [product]="item" ></app-list-item>
         </div>
-      </div>      
+      </div>
 </div>
