--- a/src/app/components/main-view/main-view.component.html
+++ b/src/app/components/main-view/main-view.component.html
@@ -1,6 +1,6 @@
 <h1>Prodotti (main-component)</h1>
 <div class="container">
   <app-search-item [products]="products" (filtered)="onFiltered($event)" ></app-search-item>
-  <app-list [products]="products"></app-list>
+  <app-list [products]="products" (deleteItem)="onDeleteItem($event)"></app-list>
 </div>
 
